--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,7 @@ kramdown:
   syntax_highlighter_opts:
     # Use existing pygments syntax highlighting css
     css_class: 'highlight'
+  parse_block_html: true
 
 # Set the Sass partials directory, as we're using @imports
 sass:
@@ -84,3 +85,4 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+
