--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ avatar: https://avatars2.githubusercontent.com/u/15965421?s=460&v=4
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: jhelland@mines.edu
+  email: 
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: #barryclark/jekyll-now
   instagram:
   linkedin:
   pinterest:
