--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Jonathan Helland
 
 # Short bio or description (displayed in the header)
-description: A grad student up at 3am
+description: No longer a grad student, no longer up at 3am
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/15965421?s=460&v=4
